--- a/src/app/modules/operation/components/operation-users/operation-users.component.html
+++ b/src/app/modules/operation/components/operation-users/operation-users.component.html
@@ -1,20 +1,55 @@
+<header>
+  <h2 class="headline">ユーザ一覧</h2>
+  <div class="spacer"></div>
+  <div class="actions">
+    <div class="button">
+      <a routerLink="/operation/users/create">
+        <button mat-flat-button color="primary">新規</button>
+      </a>
+    </div>
+  </div>
+</header>
 <div class="mat-elevation-z8">
   <mat-table mat-table [dataSource]="staffs$">
 
-    <!-- Position Column -->
     <ng-container matColumnDef="id">
       <mat-header-cell mat-header-cell *matHeaderCellDef> ID</mat-header-cell>
       <mat-cell mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="login_id">
       <mat-header-cell mat-header-cell *matHeaderCellDef> ログインID</mat-header-cell>
       <mat-cell mat-cell *matCellDef="let element"> {{element.login_id}} </mat-cell>
     </ng-container>
 
+    <ng-container matColumnDef="role">
+      <mat-header-cell mat-header-cell *matHeaderCellDef>権限</mat-header-cell>
+      <mat-cell mat-cell *matCellDef="let element"> {{element.role.display_name}} </mat-cell>
+    </ng-container>
 
-    <mat-header-row mat-header-row *matHeaderRowDef="['id','login_id']; sticky: true"></mat-header-row>
-    <mat-row matRipple [routerLink]="'/operation/users/' + row.id" *matRowDef="let row; columns: ['id','login_id'];"></mat-row>
+    <ng-container matColumnDef="delete">
+      <mat-header-cell mat-header-cell *matHeaderCellDef>削除</mat-header-cell>
+      <mat-cell mat-cell *matCellDef="let element">
+        <button
+          *ngIf="element.is_deletable"
+          mat-icon-button
+          color="warn"
+          (click)="onClickDelete($event, element)"
+          (mouseenter)="onMouseEnter($event)"
+          (mouseleave)="onMouseLeave($event)"
+        >
+          <mat-icon>delete</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+
+
+    <mat-header-row mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+    <mat-row
+      matRipple
+      [matRippleDisabled]="rippleDisable"
+      [routerLink]="'/operation/users/' + row.id"
+      *matRowDef="let row; columns: displayedColumns;"
+    ></mat-row>
   </mat-table>
 </div>
