--- a/src/app/modules/operation/components/operation-user-create/operation-user-create.component.html
+++ b/src/app/modules/operation/components/operation-user-create/operation-user-create.component.html
@@ -1,40 +1,35 @@
-  <h2>
-    <button mat-icon-button mat-flat-button color="accent" routerLink="../">
-      <mat-icon>arrow_back</mat-icon>
-    </button>
-    ユーザ作成
-  </h2>
-  <mat-card>
-    <form [formGroup]="fg" (ngSubmit)="onSub()">
-      <mat-card-content>
-        <p>
-          <mat-form-field appearance="fill" hintLabel="1 - 16文字">
-            <mat-label>ログインID</mat-label>
-            <input type="text" name="login_id" min="1" max="16" matInput formControlName="login_id">
-          </mat-form-field>
-        </p>
-        <p>
-          <mat-form-field appearance="fill" hintLabel="8 - 100文字">
-            <mat-label>パスワード</mat-label>
-            <input matInput min="8" max="100" [type]="hidePassword ? 'password' : 'text'" formControlName="password"
-                   autocomplete="new-password">
-            <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'"
-                    [attr.aria-pressed]="hidePassword">
-              <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-          </mat-form-field>
-        </p>
-        <p>
-          <mat-form-field appearance="fill">
-            <mat-label>権限</mat-label>
-            <mat-select formControlName="role_id">
-              <mat-option *ngFor="let item of (roles$ | async)" [value]="item.id">{{ item.display_name }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </p>
-      </mat-card-content>
-      <mat-card-actions align="end">
-        <button mat-raised-button color="primary" [disabled]="fg.invalid">作成</button>
-      </mat-card-actions>
-    </form>
-  </mat-card>
+<app-dashboard-header prevRouterLink="../">ユーザー作成</app-dashboard-header>
+<mat-card>
+  <form [formGroup]="fg" (ngSubmit)="onSub()">
+    <mat-card-content>
+      <p>
+        <mat-form-field appearance="fill" hintLabel="1 - 16文字">
+          <mat-label>ログインID</mat-label>
+          <input type="text" name="login_id" min="1" max="16" matInput formControlName="login_id">
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-form-field appearance="fill" hintLabel="8 - 100文字">
+          <mat-label>パスワード</mat-label>
+          <input matInput min="8" max="100" [type]="hidePassword ? 'password' : 'text'" formControlName="password"
+                 autocomplete="new-password">
+          <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'"
+                  [attr.aria-pressed]="hidePassword">
+            <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-form-field appearance="fill">
+          <mat-label>権限</mat-label>
+          <mat-select formControlName="role_id">
+            <mat-option *ngFor="let item of (roles$ | async)" [value]="item.id">{{ item.display_name }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </p>
+    </mat-card-content>
+    <mat-card-actions align="end">
+      <button mat-raised-button color="primary" [disabled]="fg.invalid">作成</button>
+    </mat-card-actions>
+  </form>
+</mat-card>
