--- a/src/app/modules/tenant/components/tenant-app-container/tenant-app-container.component.html
+++ b/src/app/modules/tenant/components/tenant-app-container/tenant-app-container.component.html
@@ -1,8 +1,6 @@
 <mat-drawer-container class="container">
   <mat-drawer #drawer mode="over">
     <mat-action-list (click)="drawer.close()">
-      <mat-list-item routerLink="/sample-admin">ホーム</mat-list-item>
-      <mat-divider></mat-divider>
     </mat-action-list>
   </mat-drawer>
   <mat-drawer-content>
@@ -10,12 +8,7 @@
 
       <div class="toolbar">
         <mat-toolbar color="accent">
-          <button (click)="drawer.toggle()" *ngIf="tenantAuthService.loggIn$() | async"
-                  class="example-icon"
-                  mat-icon-button>
-            <mat-icon>menu</mat-icon>
-          </button>
-          <span matRipple routerLink="/tenant">管理画面</span>
+          <span matRipple routerLink="/tenant">店舗管理画面</span>
         </mat-toolbar>
       </div>
       <div class="router-container">
