--- a/src/app/modules/tenant/components/tenant-basic-edit/tenant-basic-edit.component.html
+++ b/src/app/modules/tenant/components/tenant-basic-edit/tenant-basic-edit.component.html
@@ -1,7 +1,5 @@
-<ng-container *ngIf="detail">
-  <h2>
-    基本情報
-  </h2>
+<ng-container *ngIf="detail$ | async as detail">
+  <app-dashboard-header>店舗基本情報</app-dashboard-header>
   <mat-card>
     <form [formGroup]="fg" (ngSubmit)="onSub()">
       <mat-card-content>
@@ -162,7 +160,7 @@
           <mat-label>領収書発行</mat-label>
         </p>
         <p>
-          <mat-radio-group aria-label="Select an option" [formControl]="useForm">
+          <mat-radio-group aria-label="Select an option" formControlName="enable_receipt">
             <mat-radio-button value="1">OK</mat-radio-button>
             <mat-radio-button value="0">NG</mat-radio-button>
           </mat-radio-group>
@@ -172,7 +170,7 @@
           <mat-label>クレジットカード</mat-label>
         </p>
         <p>
-          <mat-checkbox [formControl]="creditCardFormControlArray[index]" *ngFor="let item of brands; let index = index"
+          <mat-checkbox [formControl]="creditCardFormControlArray[index]" *ngFor="let item of brands$ | async; let index = index"
           >{{ item.name }}</mat-checkbox>
         </p>
 
