--- a/src/app/modules/operation/components/operation-tenant-create/operation-tenant-create.component.html
+++ b/src/app/modules/operation/components/operation-tenant-create/operation-tenant-create.component.html
@@ -8,23 +8,6 @@
           <input type="text" name="name" min="1" max="100" matInput formControlName="name">
         </mat-form-field>
       </p>
-      <p>
-        <mat-form-field appearance="fill" hintLabel="1 - 16文字">
-          <mat-label>ログインID</mat-label>
-          <input type="text" name="login_id" min="1" max="16" matInput formControlName="login_id">
-        </mat-form-field>
-      </p>
-      <p>
-        <mat-form-field appearance="fill" hintLabel="8 - 100文字">
-          <mat-label>パスワード</mat-label>
-          <input matInput min="8" max="100" [type]="hidePassword ? 'password' : 'text'" formControlName="password"
-                 autocomplete="new-password">
-          <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'"
-                  [attr.aria-pressed]="hidePassword">
-            <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-        </mat-form-field>
-      </p>
 
       <p>
         <mat-form-field appearance="fill" hintLabel="30文字">
@@ -64,53 +47,15 @@
           <input type="text" name="region" formControlName="region" matInput>
         </mat-form-field>
       </p>
-      <p>
-        <mat-checkbox [formControl]="open24h">24時間営業</mat-checkbox>
-      </p>
-      <mat-grid-list [cols]="2" [rowHeight]="80">
-        <mat-grid-tile>
-          <mat-form-field appearance="fill" hintLabel="">
-            <mat-label>営業開始時間</mat-label>
-            <mat-select [formControl]="openTime">
-              <mat-option *ngFor="let hour of startTimeOptions" [value]="hour | number">{{ hour }}:00</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <mat-form-field appearance="fill" hintLabel="">
-            <mat-label>営業終了時間</mat-label>
-            <mat-select [formControl]="closeTime">
-              <mat-option *ngFor="let hour of getEndTimeOptions(openTime.value)" [value]="hour | number">{{ hour }}:00
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </mat-grid-tile>
-      </mat-grid-list>
+      <app-dashboard-time-range-form
+        label="営業"
+        [formControl]="openTimeCombined"
+      ></app-dashboard-time-range-form>
 
-
-      <p>
-        <mat-checkbox [formControl]="reception24h">24時間受付</mat-checkbox>
-      </p>
-      <mat-grid-list [cols]="2" [rowHeight]="80">
-        <mat-grid-tile>
-          <mat-form-field appearance="fill" hintLabel="">
-            <mat-label>受付開始時間</mat-label>
-            <mat-select [formControl]="receptionOpenTime">
-              <mat-option *ngFor="let hour of startTimeOptions" [value]="hour | number">{{ hour }}:00</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <mat-form-field appearance="fill" hintLabel="">
-            <mat-label>受付終了時間</mat-label>
-            <mat-select [formControl]="receptionCloseTime">
-              <mat-option *ngFor="let hour of getEndTimeOptions(receptionOpenTime.value)"
-                          [value]="hour | number">{{ hour }}:00
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </mat-grid-tile>
-      </mat-grid-list>
+      <app-dashboard-time-range-form
+        label="受付"
+        [formControl]="receptionTimeCombined"
+      ></app-dashboard-time-range-form>
 
       <p>
         <mat-form-field appearance="fill" hintLabel="60文字">
